# UEEditorMCP

./: .gitignore  DEVPLAN.md  README.md  UEEditorMCP.uplugin  setup_mcp.bat  setup_mcp.ps1
Python/: pyproject.toml  requirements-dev.txt  requirements.txt  ue_bridge.py  ue_mcp_cli.py
Python/ue_editor_mcp/: __init__.py  connection.py  server.py  server_blueprint.py  server_blueprint_graph.py  server_blueprint_management.py  server_blueprint_nodes.py  server_editor.py  server_factory.py  server_materials.py  server_umg.py  server_umg_widget.py  server_unified.py  server_unreal_logs.py
Python/ue_editor_mcp/registry/: __init__.py  actions.py
Python/ue_editor_mcp/resources/: conventions.md  error_codes.md  patch_spec.md
Python/ue_editor_mcp/tools/: __init__.py  blueprint.py  editor.py  materials.py  nodes.py  nodes_create.py  nodes_graph.py  project.py  structs.py  umg.py
Source/UEEditorMCP/: UEEditorMCP.Build.cs
Source/UEEditorMCP/Private/: BlueprintAutoLayoutCommands.cpp  MCPBridge.cpp  MCPCommonUtils.cpp  MCPContext.cpp  MCPLogCapture.cpp  MCPServer.cpp  MaterialLayoutUtils.cpp  UEEditorMCPModule.cpp
Source/UEEditorMCP/Private/Actions/: BlueprintActions.cpp  EditorAction.cpp  EditorActions.cpp  EditorDiffActions.cpp  GraphActions.cpp  LayoutActions.cpp  MaterialActions.cpp  NodeActions.cpp  ProjectActions.cpp  (+1 more)
Source/UEEditorMCP/Public/: BlueprintAutoLayoutCommands.h  MCPBridge.h  MCPCommonUtils.h  MCPContext.h  MCPLogCapture.h  MCPServer.h  MaterialLayoutUtils.h  UEEditorMCPModule.h
tests/: __init__.py  test_schema_contract.py  test_unreal_logs_server.py
(+10 files in other folders)
